crates/skel/tests/snapshots/adherence__adhere@atomic-data_atomic_lost_update.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/atomic-data/atomic_lost_update/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 6 | spawn w1 | matched | 32 |
| 6 | spawn w2 | matched | 34 |

## main::w1

matched Rust fn: `w1`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 11 | atomic_load c | matched | 9 |
| 12 | cas c | matched | 10 |

## main::w2

matched Rust fn: `w2`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 20 | atomic_load c | matched | 20 |
| 21 | cas c | matched | 21 |
