crates/skel/tests/snapshots/adherence__adhere@atomic-data_counter_overflow_safety.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/atomic-data/counter_overflow_safety/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 1

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 7 | spawn w1 | matched | 23 |
| 7 | spawn w2 | matched | 25 |

## main::w1

matched Rust fn: `w1`; DSL lock depth 1; Rust lock calls 1

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 10 | lock m | matched | 7 |

## main::w2

matched Rust fn: `w2`; DSL lock depth 1; Rust lock calls 1

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 13 | lock m | matched | 14 |
