crates/skel/tests/snapshots/adherence__adhere@channel_bounded_backpressure_lock_held.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/channel/bounded_backpressure_lock_held/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 7 | spawn sender | matched | 47 |
| 7 | spawn receiver | matched | 48 |

## main::sender

matched Rust fn: `sender`; DSL lock depth 0; Rust lock calls 3

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 10 | send ch | reordered | 23 |
| 10 | send ch | reordered | 25 |

## main::receiver

matched Rust fn: `receiver`; DSL lock depth 0; Rust lock calls 3

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 13 | recv ch | matched | 31 |
| 13 | recv ch | reordered | 33 |
