crates/skel/tests/snapshots/adherence__adhere@channel_rendezvous_both_send.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/channel/rendezvous_both_send/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 6 | spawn s1 | matched | 31 |
| 6 | spawn r | matched | 32 |

## main::s1

matched Rust fn: `s1`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 9 | send ch | matched | 17 |

## main::r

matched Rust fn: `r`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 12 | recv ch | matched | 22 |
