crates/skel/tests/snapshots/adherence__adhere@channel_send_while_holding_mutex.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/channel/send_while_holding_mutex/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 7 | spawn s | matched | 31 |
| 7 | spawn r | matched | 32 |

## main::s

matched Rust fn: `s`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 10 | send ch1 | matched | 17 |

## main::r

matched Rust fn: `r`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 13 | recv ch1 | matched | 22 |
