crates/skel/tests/snapshots/adherence__adhere@condvar_bare_wait_no_predicate.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/condvar/bare_wait_no_predicate/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 8 | spawn waiter | matched | 12 |
| 8 | spawn notifier | reordered | 23 |

## main::waiter

matched Rust fn: `<none>`; DSL lock depth 1; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 11 | lock m | reordered | 14 |
| 11 | wait cv | matched | 17 |

## main::notifier

matched Rust fn: `<none>`; DSL lock depth 1; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 14 | lock m | missing | - |
| 14 | notify_one cv | missing | - |
