crates/skel/tests/snapshots/adherence__adhere@lock-order_abba_2lock.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/lock-order/abba_2lock/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 4

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 7 | spawn t1 | matched | 12 |
| 7 | spawn t2 | reordered | 20 |

## main::t1

matched Rust fn: `<none>`; DSL lock depth 2; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 10 | lock a | reordered | 13 |
| 10 | lock b | matched | 14 |

## main::t2

matched Rust fn: `<none>`; DSL lock depth 2; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 13 | lock a | nesting_mismatch | - |
| 13 | lock b | nesting_mismatch | - |
