crates/skel/tests/snapshots/adherence__adhere@lock-order_cross_module_cycle.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/lock-order/cross_module_cycle/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 7 | spawn t1 | matched | 41 |
| 7 | spawn other::t2 | matched | 43 |

## main::t1

matched Rust fn: `t1`; DSL lock depth 2; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 10 | lock a | matched | 12 |
| 10 | lock other::b | matched | 15 |

## other::t2

matched Rust fn: `<none>`; DSL lock depth 2; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 17 | lock main::a | nesting_mismatch | - |
| 17 | lock b | nesting_mismatch | - |
